Archive2/7f/b84944f74162f3/output
main.cpp:6:9: error: missing 'typename' prior to dependent type name 'std::vector<T>::const_iterator'
    for(std::vector<T>::const_iterator it=input.begin();it!=input.end();it++){
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        typename 
1 error generated.
