Archive2/7f/b84944f74162f3/main.cpp
#include <vector>

template<typename T>
T processVector(const std::vector<T>& input){

    for(std::vector<T>::const_iterator it=input.begin();it!=input.end();it++){

            //process vector
    }

}